# AutoClicker

./: .gitignore  LICENSE  README.md  autoclicker.py  pyproject.toml
.github/workflows/: build-linux.yml  build-windows.yml  release.yml
autoclicker/: __init__.py  config.py  hotkeys_unix.py  hotkeys_windows.py  thread.py  window.py
tests/: test_autoclicker.py
