[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoclicker"
version = "1.0.0"
description = "AutoClicker multiplataforma con PySide6"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Cesar-RG"},
]
dependencies = [
    "PySide6>=6.5",
    "pyautogui>=0.9",
    "keyboard>=0.13 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
]

[project.scripts]
autoclicker = "autoclicker:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-qt>=4",
]

[tool.pytest.ini_options]
qt_api = "pyside6"
