[project.urls]
Repository = "https://github.com/Cesar-RG/AutoClicker"
Issues = "https://github.com/Cesar-RG/AutoClicker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoclicker"
version = "1.0.0"
description = "AutoClicker multiplataforma con PySide6"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Cesar-RG"},
]
dependencies = [
    "PySide6>=6.5",
    "pyautogui>=0.9",
    "keyboard>=0.13 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "mypy>=1",
    "pytest>=8",
    "pytest-qt>=4",
    "ruff>=0.14",
]

[project.scripts]
autoclicker = "autoclicker:main"

[dependency-groups]
dev = [
    "mypy>=1",
    "pytest>=8",
    "pytest-qt>=4",
    "ruff>=0.14",
]
build = [
    "pyinstaller>=6",
]

[tool.pytest.ini_options]
qt_api = "pyside6"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disable_error_code = ["attr-defined", "arg-type"]
